Initial Version of the MVP - WIP